fix(list-item): add CSS to fix text-overflow

--- a/packages/lumx-core/src/scss/components/list/lumapps/_mixins.scss
+++ b/packages/lumx-core/src/scss/components/list/lumapps/_mixins.scss
@@ -79,6 +79,8 @@
 
 @mixin lumx-list-item-content() {
     @include lumx-typography('body1');
+    display: flex;
+    min-width: 0;
 
     flex: 1 1 auto;
 }
